# BnuuyBotGithub

./: ._.gitignore  ._.gitignore.sb-f41a88cf-1mZdfY  ._README.md  ._README.md.sb-f41a88cf-mKz48i  ._all_imports.txt  ._bunny_links.txt  ._bunny_submissions.txt  ._responses.txt  ._run.sh  .gitignore  README.md  all_imports.txt  bunny_links.txt  bunny_submissions.txt  pyproject.toml  requirements.txt  responses.txt  run.py  run.sh  update.py  update.sh
config/: ._aliases.json  ._autoplaylist.txt  ._custom_configs.txt  ._example_aliases.json  ._example_options.ini  ._options.ini  ._permissions.ini  ._whitelist.txt  custom_configs.txt
config/i18n/: ._en.json  en.json
emotes/: ._422271740614541312.txt  ._default.txt  default.txt
keymash_data/: ._data_eng.txt  ._data_kma.txt  data_eng.txt  data_kma.txt
misc_data/: ._babynames.csv  ._dadjokes.txt  ._emotions.txt  ._goku_tries.txt  ._ratatouille.txt  ._starwars.txt  ._wordles.txt  babynames.csv  dadjokes.txt  emotions.txt  wordles.txt
misc_data/scoreboards/: ._goku_attempts.json  ._goku_attempts.txt
musicbot/: ._bot.py  ._config.py  ._constants.py  ._constructs.py  ._downloader.py  ._entry.py  ._json.py  ._opus_loader.py  ._player.py  ._spotify.py  ._utils.py  bot.py  downloader.py  player.py  playlist.py  scorekeeper.py
musicbot/emojipasta/: .___init__.py  ._emoji-mappings.json  ._generator.py  emoji-mappings.json  generator.py
musicbot/robertdowneyjr/: .___init__.py  ._rdj.py  rdj.py
